--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-906.6KB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
-  - {name: 🇸🇬 新加坡-368.2KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-440.2KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-482.1KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.07MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-5.15MB/s(Youtube:不良林), server: xmrh014.xmrth-node.xyz, port: 15885, type: vmess, uuid: ab3f9ddc-7c35-3793-98f0-1c37eb9741e1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh014.xmrth-node.xyz}}
-  - {name: 🇺🇸 美国-2.23MB/s(Youtube:不良林), server: test.johnnyz.tk, port: 21997, type: vmess, uuid: d27f450c-e9e4-4427-90bf-42020401c1ad, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /johnnyz996, ws-headers: {Host: test.johnnyz.tk}}
-  - {name: 🇺🇸 美国-1.17MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.32MB/s(Youtube:不良林), server: 45.137.97.205, port: 58000, type: trojan, password: 44ddff24-9b11-4879-8f70-7eb69c32e735, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-518.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: 14.119.87.189, port: 45239, type: vmess, uuid: 551e7763-47f2-4682-ab0f-9c3c59298a72, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.189}}
+  - {name: 🇺🇸 美国-906.6KB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
+  - {name: 🇭🇰 香港-2.25MB/s(Youtube:不良林), server: 43.129.158.139, port: 20010, type: vmess, uuid: fb2f129a-87de-40f9-ceb9-74ec482e5f88, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇫🇷 法国-414.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.15MB/s(Youtube:不良林), server: 38.59.224.49, port: 40001, type: vmess, uuid: 97cd14b8-4332-40f9-84fc-3fc235354df9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-2.40MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.20MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-368.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-440.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-482.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.15MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.23MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.32MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
+      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
+      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
