--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-518.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-6.49MB/s(Youtube:不良林), server: 14.119.87.189, port: 45239, type: vmess, uuid: 551e7763-47f2-4682-ab0f-9c3c59298a72, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.189}}
-  - {name: 🇺🇸 美国-906.6KB/s(Youtube:不良林), server: 107.173.166.160, port: 11188, type: vmess, uuid: d644ebef-f0e6-468f-d122-cea661ed9d09, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 107.173.166.160}}
-  - {name: 🇭🇰 香港-2.25MB/s(Youtube:不良林), server: 43.129.158.139, port: 20010, type: vmess, uuid: fb2f129a-87de-40f9-ceb9-74ec482e5f88, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-414.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 818, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: crj749919467.n-tmd.com, port: 31502, type: vmess, uuid: 9b4f0258-1127-41d9-f30a-469e80737327, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.07MB/s(Youtube:不良林), server: 129.150.51.215, port: 30839, type: vmess, uuid: 19bf4866-54ce-4fc9-8903-db7e160c5b81, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.15MB/s(Youtube:不良林), server: 38.59.224.49, port: 40001, type: vmess, uuid: 97cd14b8-4332-40f9-84fc-3fc235354df9, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-2.40MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-277.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-321.6KB/s(Youtube:不良林), server: vr.eseabean.xyz, port: 12860, type: vmess, uuid: f0c28644-eba5-4de7-e9ed-abcf58a657f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /media, ws-headers: {Host: vr.eseabean.xyz}}
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-18.93MB/s(Youtube:不良林), server: 14.119.87.189, port: 45239, type: vmess, uuid: 551e7763-47f2-4682-ab0f-9c3c59298a72, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.189}}
   - {name: 🇯🇵 日本-5.20MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-4.38MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-737.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-518.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-906.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.25MB/s(Youtube:不良林)
-      - 🇫🇷 法国-414.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.40MB/s(Youtube:不良林)
+      - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
+      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
       - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
+      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
