--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-277.1KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-321.6KB/s(Youtube:不良林), server: vr.eseabean.xyz, port: 12860, type: vmess, uuid: f0c28644-eba5-4de7-e9ed-abcf58a657f5, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /media, ws-headers: {Host: vr.eseabean.xyz}}
-  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.26MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-18.93MB/s(Youtube:不良林), server: 14.119.87.189, port: 45239, type: vmess, uuid: 551e7763-47f2-4682-ab0f-9c3c59298a72, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 14.119.87.189}}
-  - {name: 🇯🇵 日本-5.20MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-4.38MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇬🇧 英国-1.11MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-737.0KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇯🇵 日本-5.20MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12001, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-502.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 阿联酋-1.88MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
+  - {name: 🇭🇰 香港-1.46MB/s(Youtube:不良林), server: xmrh000.xmrth-node.xyz, port: 15880, type: vmess, uuid: ab3f9ddc-7c35-3793-98f0-1c37eb9741e1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh000.xmrth-node.xyz}}
+  - {name: 🇯🇵 日本-6.07MB/s(Youtube:不良林), server: 140.238.42.147, port: 11188, type: vmess, uuid: 798550eb-c374-4113-b0d5-530e7d4ddedc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 140.238.42.147}}
+  - {name: 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇸🇬 新加坡-508.3KB/s(Youtube:不良林), server: supersouth.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supersouth.xn--mesv7f5toqlp.club, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,19 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-277.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-321.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-18.93MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
-      - 🇯🇵 日本-4.38MB/s(Youtube:不良林)
       - 🇬🇧 英国-1.11MB/s(Youtube:不良林)
-      - 🇨🇳 中国-737.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.3KB/s(Youtube:不良林)
+      - 阿联酋-1.88MB/s(Youtube:不良林)
+      - 🇭🇰 香港-1.46MB/s(Youtube:不良林)
+      - 🇯🇵 日本-6.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.08MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.00MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-508.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
